--- a/index.html
+++ b/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>INDEX</title>
+	<title>Inicio</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<link rel="stylesheet" type="text/css" href="css/estilosIndex.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+ 	 <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+  	<script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
 </head>
 <body>
+
+<div class="toolbar toolbar--material">
+	<div class="toolbar__left toolbar--material__left">
+		
+	</div>
+	 
+	  <div class="toolbar__right toolbar--material__right">
+		<span class="toolbar-button toolbar-button--material_right">
+	     	<i class="zmdi zmdi-more-vert zmdi-hc-lg"></i>
+	    </span>
+  </div>
+</div>
 	
-	<div class="top"> 
-		<img src="img/menu.png">
-	</div>
+<div class="contenido">
+	
+</div>
 
-	<div class="contenido"></div>
 
-	<div class="bot"> 
-		<img src="img/calendar.png">
-		<img src="img/speech.png">
-		<img src="img/time.png">
-		<img src="img/invoice.png">
-		<img src="img/warning.png">
-	</div>
+
+<div class="tabbar">
+  <label class="tabbar__item">
+    <input type="radio" name="tabbar-b" checked="checked">
+    <button class="tabbar__button">
+      <i class="zmdi zmdi-calendar zmdi-hc-3x"></i>
+    </button>
+  </label>
+
+  <label class="tabbar__item">
+    <input type="radio" name="tabbar-b" checked="checked">
+    <button class="tabbar__button">
+      <i class="zmdi zmdi-comments zmdi-hc-3x"></i>
+    </button>
+  </label>
+
+  <label class="tabbar__item">
+    <input type="radio" name="tabbar-b" checked="checked">
+    <button class="tabbar__button">
+      <i class="zmdi zmdi-time zmdi-hc-3x"></i>
+    </button>
+  </label>
+
+  <label class="tabbar__item">
+    <input type="radio" name="tabbar-b">
+    <button class="tabbar__button">
+      <i class="zmdi zmdi-money zmdi-hc-3x"></i>
+    </button>
+  </label>
+
+  <label class="tabbar__item">
+    <input type="radio" name="tabbar-b">
+    <button class="tabbar__button">
+    	<i class="zmdi zmdi-alert-circle zmdi-hc-3x"></i>
+    </button>
+  </label>
+
+</div>
+
 
 
 
