--- a/login.html
+++ b/login.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 	<title>Login</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+ 	 <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+  	<script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
 
 </head>
 <body>	
@@ -20,12 +17,26 @@
 
 		<form action="" method="POST">
 		  <div class="form-group col-md-4">
-		    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Expediente">
-		  </div>
-		  <div class="form-group col-md-4" >
-		    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Contraseña">
-		  </div><br><br>
-		  <button type="button" class="btn btn-lg">Iniciar Sesión</button>
+
+		    <p>
+
+     			 <ons-input id="username" modifier="material" placeholder="Expediente" float ng-model="page.username"></ons-input>
+
+    		</p>
+
+    		 <p>
+
+     			 <ons-input id="pass" modifier="material" placeholder="Contraseña" float ng-model="page.pass"></ons-input>
+
+    		</p>
+    		
+			<p style="margin-top: 30px;">
+
+	      		<ons-button ng-click="page.login()">Iniciar Sesion</ons-button>
+
+	    	</p>
+
+		</div>
 		</form>
 	</center>
 
