--- a/html/crear_reporte.html
+++ b/html/crear_reporte.html
@@ -26,52 +26,9 @@
 
 <!--contenido-->
 <div class="contenido">
-    <center><h3>Calendario de actividades</h3></center>
+    <center><h3>Crear reporte</h3></center>
 
-    <ons-card onclick="window.location.href = 'calendario.html?id_event='"
-              style="background: linear-gradient(to bottom, #e0e0e0, #c4c4c4)">
-        <center>
-            <b>Invasión Troyana</b>
-            <br><b>24 de Noviembre</b>
-        </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor...</p>
-    </ons-card>
 
-    <ons-card onclick="window.location.href = 'calendario.html?id_event='"
-              style="background: linear-gradient(to bottom, #e0e0e0, #c4c4c4)">
-        <center>
-            <b>Carritos Troyanos</b>
-            <br><b>27 de Noviembre</b>
-        </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor...</p>
-    </ons-card>
-
-    <ons-card onclick="window.location.href = 'calendario.html?id_event='"
-              style="background: linear-gradient(to bottom, #e0e0e0, #c4c4c4)">
-        <center>
-            <b>Congreso Nacional de Computación</b>
-            <br><b>21 de Noviembre</b>
-        </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor...</p>
-    </ons-card>
-
-    <ons-card onclick="window.location.href = 'calendario.html?id_event='"
-              style="background: linear-gradient(to bottom, #e0e0e0, #c4c4c4)">
-        <center>
-            <b>Taller de Jutsus</b>
-            <br><b>3 de Diciembre</b>
-        </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor...</p>
-    </ons-card>
-
-    <ons-card onclick="window.location.href = 'calendario.html?id_event='"
-              style="background: linear-gradient(to bottom, #e0e0e0, #c4c4c4)">
-        <center>
-            <b>Taller Avanzado de Jutsus</b>
-            <br><b>7 de Diciembre</b>
-        </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor...</p>
-    </ons-card>
 </div>
 <!--end contenido-->
 
