--- a/login.html
+++ b/login.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>Login</title>
-	<meta charset="utf-8">
-	<script src="js/funciones.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
- 	 <link rel="stylesheet" href="https://unpkg.com/onsenui/css/old-onsen-css-components.min.css">
-  	<script src="https://unpkg.com/onsenui/js/onsenui.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/onsenui/css/old-onsen-css-components.min.css">
+	<link rel="stylesheet" href="../css/estilos.css">
+	<script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
 
 </head>
 <body>	
