--- a/html/calendario.html
+++ b/html/calendario.html
@@ -77,7 +77,7 @@
 
 <!--footer-->
 <div class="tabbar">
-    <label class="tabbar__item">
+    <label class="tabbar__item" onclick="calendario()">
         <input type="radio" name="tabbar-b" checked="checked">
         <button class="tabbar__button">
             <i class="zmdi zmdi-calendar zmdi-hc-3x"></i>
