Cambios versión movil

--- a/foro.html
+++ b/foro.html
@@ -15,3 +15,8 @@
     <ons-card>
      Título
    </ons-card>
+
+  <ons-fab position='bottom right'>
+    <ons-icon icon='md-plus'></ons-icon>
+  </ons-fab>
+
