--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
     		 <p>
 
-     			 <ons-input id="pass" modifier="material" placeholder="Contraseña" style="font-size: 50px;" float ng-model="page.pass"></ons-input>
+     			 <ons-input type="password" id="pass" modifier="material" placeholder="Contraseña" style="font-size: 50px;" float ng-model="page.pass"></ons-input>
 
     		</p>
     		
