Modificación de convocatorias (Web)

--- a/WEB/administrativo.html
+++ b/WEB/administrativo.html
@@ -1,120 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>prueba</title>
-	<meta name="viewport" content="width = device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet"  href="css/talacha.css">
+    <title>Convocatorias</title>
+    <meta name="viewport" content="width = device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/talacha.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-		<header>
-			<div class="container">
-				<h1>Convocatorias</h1>
-			</div>
-		</header>
-		
-		<br>
-		<br>
-		<br>
-		<div class="container">
-			<section class="main row">
-				<article class="col-xs-12 col-md-8">
-					<h3>
-						becas para madres solteras
-					</h3>
-				</article>	
 
-				<aside class="col-xs-6 col-md-4">
-					<button class="btt btn-primary">
-							ver
-					</button>
-					<button class="btt btn-warning">
-							Editar
-					</button>
-					<button class="btt btn-danger">
-							Eliminar
-					</button>
-				</aside>
-			</section>
-			<section class="main row">
-				<article class="col-xs-12 col-md-8">
-					<h3>
-						becas para estudiantes indigenas
-					</h3>
-				</article>	
+<header>
+    <div class="container">
+        <h1>Convocatorias</h1>
+    </div>
+</header>
 
-				<aside class="col-xs-6 col-md-4">
-					<button class="btt btn-primary">
-							ver
-					</button>
-					<button class="btt btn-warning">
-							Editar
-					</button>
-					<button class="btt btn-danger">
-							Eliminar
-					</button>
-				</aside>
-			</section>
-			<section class="main row">
-				<article class="col-xs-12 col-md-8">
-					<h3>
-						becas de movilidad
-					</h3>
-				</article>	
+<br>
+<br>
+<br>
 
-				<aside class="col-xs-6 col-md-4">
-					<button class="btt btn-primary">
-							ver
-					</button>
-					<button class="btt btn-warning">
-							Editar
-					</button>
-					<button class="btt btn-danger">
-							Eliminar
-					</button>
-				</aside>
-			</section>
-			<section class="main row">
-				<article class="col-xs-12 col-md-8">
-					<h3>
-						Liberacion de servicio social
-					</h3>
-				</article>	
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th class="col-lg-1">#</th>
+                    <th class="col-lg-5">Convocatoria</th>
+                    <th class="col-lg-2"></th>
+                    <th class="col-lg-2"></th>
+                    <th class="col-lg-2"></th>
+                </tr>
+                </thead>
 
-				<aside class="col-xs-6 col-md-4">
-					<button class="btt btn-primary">
-							ver
-					</button>
-					<button class="btt btn-warning">
-							Editar
-					</button>
-					<button class="btt btn-danger">
-							Eliminar
-					</button>
-				</aside>
-			</section>
-			<section class="main row">
-				<article class="col-xs-12 col-md-8">
-					<h3>
-						Becas alimenticias
-					</h3>
-				</article>	
+                <tbody>
+                <tr>
+                    <th scope="col">1</th>
+                    <td>Beca de manutención</td>
+                    <td><input type="button" class="btn btn-primary btn-larger" value="Ver"></td>
+                    <td><input type="button" class="btn btn-warning btn-larger" value="Editar"></td>
+                    <td><input type="button" class="btn btn-danger btn-larger" value="Eliminar"></td>
+                </tr>
 
-				<aside class="col-xs-6 col-md-4">
-					<button class="btt btn-primary">
-							ver
-					</button>
-					<button class="btt btn-warning">
-							Editar
-					</button>
-					<button class="btt btn-danger">
-							Eliminar
-					</button>
-				</aside>
-			</section>
-		</div>
+                <tr>
+                    <th scope="col">2</th>
+                    <td>Beca de madres soltera</td>
+                    <td><input type="button" class="btn btn-primary btn-larger" value="Ver"></td>
+                    <td><input type="button" class="btn btn-warning btn-larger" value="Editar"></td>
+                    <td><input type="button" class="btn btn-danger btn-larger" value="Eliminar"></td>
+                </tr>
 
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+                <tr>
+                    <th scope="col">3</th>
+                    <td>Carrera troyana</td>
+                    <td><input type="button" class="btn btn-primary btn-larger" value="Ver"></td>
+                    <td><input type="button" class="btn btn-warning btn-larger" value="Editar"></td>
+                    <td><input type="button" class="btn btn-danger btn-larger" value="Eliminar"></td>
+                </tr>
+
+                <tr>
+                    <th scope="col">4</th>
+                    <td>Carritos troyanos</td>
+                    <td><input type="button" class="btn btn-primary btn-larger" value="Ver"></td>
+                    <td><input type="button" class="btn btn-warning btn-larger" value="Editar"></td>
+                    <td><input type="button" class="btn btn-danger btn-larger" value="Eliminar"></td>
+                </tr>
+
+                <tr>
+                    <th scope="col">5</th>
+                    <td>Taller de Jutsus</td>
+                    <td><input type="button" class="btn btn-primary btn-larger" value="Ver"></td>
+                    <td><input type="button" class="btn btn-warning btn-larger" value="Editar"></td>
+                    <td><input type="button" class="btn btn-danger btn-larger" value="Eliminar"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
