--- a/WEB/CrearEvento.html
+++ b/WEB/CrearEvento.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Modificar Convocatoria</title>
-	<meta name="viewport" content="width = device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
+	<title>Crear Evento</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet"  href="css/talacha.css">
+	<meta name="viewport" content="width = device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
+
 </head>
 <body>
 	<header>
 		<div class="container">
-			<h1>Modificar Convocatoria: CONV_NAME</h1>
+			 <div class="señal">
+  				  <a  href="#" role="button"> <img src="xa/atras.png" style="width: 40px"></a>
+  				  <a  href="#" role="button"> <img src="xa/inicio.png" style="width: 40px"></a>
+			 </div>	
+			 <div class="nom">
+			 	<h1>Crear Evento</h1>
+			 </div>
+			 <div class="perfil">
+			 	<img src="xa/cara.png" alt="Responsive image" class="img-circle" style=" width: 50px">
+			 	<label>	Juanita Perez</label>
+			 </div>
 		</div>
 	</header>
 	<br>
 	<br>
 	<form class="container">
-		<h3>Nombre de la convocatoria</h3>
+		<h3>Nombre del evento</h3>
   		<div>
   			<div class="row">
  				 <div class="col-xs-6">
@@ -23,7 +34,7 @@
 				 </div>
 			</div>
   		</div>
-  		<h3>Tipo de convocatoria</h3>
+  		<h3>Tipo de evento</h3>
   		<div>
   			<div class="row">
  				 <div class="col-xs-6">
@@ -31,7 +42,7 @@
 				 </div>
 			</div>
   		</div>	
-  		<h3>Descripción</h3>
+  		<h3>Descripcion</h3>
   		<div>
   			<div class="row">
  				 <div class="col-xs-6">
@@ -44,7 +55,7 @@
 		<img src="xa/ima.jpg" class="img-responsive" alt="Responsive image">
 	</div>
 
-		<button id="boto" type="button" class="btn btn-primary btn-lg">Modificar convocatoria</button>
+		<button id="boto" type="button" class="btn btn-primary btn-lg">Publicar evento</button>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
